<resources>
    <string name="app_name">OkApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="alert">Alert</string>
    <string name="login_error">Incorrect username or password.</string>
    <string name="please_wait">Please wait</string>
    <string name="server_error">An error occurred</string>
    <string name="notice_search">Tap on the profile you would like to chat or search</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password_confirmation">Password Confirmation</string>
    <string name="prompt_birthdate">Birthdate</string>
    <string name="prompt_language">Language</string>
    <string name="action_register_account">Register Account</string>
    <string name="register_error">Unable to register a new user.</string>

    <string-array name="spinner_language">
        <item>English</item>
        <item>French</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
